bin/tests/snapshots/enable_first__525a78d8d78a9286e64c9df7717254b4_fix.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  syntaxHighlighting.enable = true;
  enable = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,4 @@
 {
+  enable = true;
   syntaxHighlighting.enable = true;
-  enable = true;
 }
