bin/tests/snapshots/enable_first__525a78d8d78a9286e64c9df7717254b4_lint_json.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  syntaxHighlighting.enable = true;
  enable = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "enable_first",
      "note": "`enable` is not the first attribute",
      "code": 30,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 17
            }
          },
          "message": "`enable` should be the first attribute in this set",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 4,
                "column": 2
              }
            },
            "fix": "{\n  enable = true;\n  syntaxHighlighting.enable = true;\n}"
          }
        }
      ]
    }
  ]
}
