bin/tests/snapshots/enable_first__525a78d8d78a9286e64c9df7717254b4_lint_stderr.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  syntaxHighlighting.enable = true;
  enable = true;
}
---
[enable_first] Warning: `enable` is not the first attribute
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   enable = true;
   │   ───────┬──────  
   │          ╰──────── enable should be the first attribute in this set
───╯
