bin/tests/snapshots/enable_first__7d6f0f399230454f14caedf411d2eef4_fix.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  nssmdns4 = true;
  enable = true;
  openFirewall = true;
}
---
