bin/tests/snapshots/enable_first__7d6f0f399230454f14caedf411d2eef4_lint_errfmt.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  nssmdns4 = true;
  enable = true;
  openFirewall = true;
}
---
<temp_file_path>>3:3:W:30:[enable_first] `enable` should be the first attribute in this set
