bin/tests/snapshots/enable_first__8f17a2409a5abe4e73e471e5e6beb408_fix.snap
---
source: bin/tests/enable_first.rs
---
{
  inherit lib;
  enable = true;
  nssmdns4 = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,7 @@
 {
   inherit lib;
+
   enable = true;
+
   nssmdns4 = true;
 }
