bin/tests/snapshots/enable_first__8f17a2409a5abe4e73e471e5e6beb408_lint_errfmt.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  inherit lib;
  enable = true;
  nssmdns4 = true;
}
---
<temp_file_path>>3:3:W:32:[enable_blank_line] a blank line should separate this from what follows
