bin/tests/snapshots/enable_first__8f17a2409a5abe4e73e471e5e6beb408_lint_json.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  inherit lib;
  enable = true;
  nssmdns4 = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "enable_blank_line",
      "note": "No blank line after `enable`",
      "code": 32,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 17
            }
          },
          "message": "a blank line should separate this from what follows",
          "suggestion": null
        }
      ]
    }
  ]
}
